; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_uint_analog_dpad_mode.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_uint_analog_dpad_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64* }

@MENU_ENUM_LABEL_VALUE_NONE = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_LEFT_ANALOG = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RIGHT_ANALOG = common dso_local global i32 0, align 4
@ANALOG_DPAD_LAST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i8*, i64)* @setting_get_string_representation_uint_analog_dpad_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setting_get_string_representation_uint_analog_dpad_mode(%struct.TYPE_7__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca [3 x i8*], align 16
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* @MENU_ENUM_LABEL_VALUE_NONE, align 4
  %9 = call i8* @msg_hash_to_str(i32 %8)
  %10 = getelementptr inbounds [3 x i8*], [3 x i8*]* %7, i64 0, i64 0
  store i8* %9, i8** %10, align 16
  %11 = load i32, i32* @MENU_ENUM_LABEL_VALUE_LEFT_ANALOG, align 4
  %12 = call i8* @msg_hash_to_str(i32 %11)
  %13 = getelementptr inbounds [3 x i8*], [3 x i8*]* %7, i64 0, i64 1
  store i8* %12, i8** %13, align 8
  %14 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RIGHT_ANALOG, align 4
  %15 = call i8* @msg_hash_to_str(i32 %14)
  %16 = getelementptr inbounds [3 x i8*], [3 x i8*]* %7, i64 0, i64 2
  store i8* %15, i8** %16, align 16
  %17 = load i8*, i8** %5, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i64*, i64** %21, align 8
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @ANALOG_DPAD_LAST, align 8
  %25 = urem i64 %23, %24
  %26 = getelementptr inbounds [3 x i8*], [3 x i8*]* %7, i64 0, i64 %25
  %27 = load i8*, i8** %26, align 8
  %28 = load i64, i64* %6, align 8
  %29 = call i32 @strlcpy(i8* %17, i8* %27, i64 %28)
  ret void
}

declare dso_local i8* @msg_hash_to_str(i32) #1

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
